--- a/src/main/webapp/i18n/nl/global.json
+++ b/src/main/webapp/i18n/nl/global.json
@@ -4,6 +4,11 @@
     "browsehappy": "U gebruikt een <strong>verouderde</strong> browser. <a href=\"http://browsehappy.com/?locale=en\">upgrade uw browser</a> om de bruikbaarheid te verbeteren.",
     "menu": {
       "home": "Startpagina",
+      "about-us": "About Us",
+      "contact-us": "Contact Us",
+      "services": "Services",
+      "page-one": "Page One",
+      "page-two": "Page Two",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entiteiten",
