--- a/src/main/webapp/i18n/zh-cn/global.json
+++ b/src/main/webapp/i18n/zh-cn/global.json
@@ -4,6 +4,11 @@
     "browsehappy": "您目前使用<strong>过于老旧</strong>的浏览器, 建议您<a href=\"http://browsehappy.com/?locale=en\">升级浏览器</a>让您有更佳的上网体验.",
     "menu": {
       "home": "首页",
+      "about-us": "About Us",
+      "contact-us": "Contact Us",
+      "services": "Services",
+      "page-one": "Page One",
+      "page-two": "Page Two",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "数据",
